// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> Should render correctly 1`] = `
<div>
  <footer
    class="sc-breuTD bLHECa"
    id="footer"
  >
    <div
      class="logo__container sc-ksZaOG ibVvbd logo__container--centred logo__container--no-padding"
    >
      <a
        class="logo__a"
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--pride logo__heading--no-padding"
          role="button"
        >
          &lt;G/&gt;
        </h1>
      </a>
    </div>
    <div
      class="sc-hAZoDl dOa-DtS"
    >
      <span
        class="sc-iqcoie fIUTrZ sc-crXcEl ggwNYf"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="sc-jqUVSM iynNqP sc-fnykZs"
    >
      <div
        class="sc-kDDrLX hmGkcq"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/blog"
        >
          Blog
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/photography"
        >
          Photography
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/work"
        >
          Work
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/contact"
        >
          Contact
        </a>
      </div>
      <div
        class="sc-kDDrLX hmGkcq"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;

exports[`<Footer /> Should render correctly with custom className 1`] = `
<div>
  <footer
    class="sc-breuTD bLHECa test-custom-className"
    id="footer"
  >
    <div
      class="logo__container sc-ksZaOG ibVvbd logo__container--centred logo__container--no-padding"
    >
      <a
        class="logo__a"
        href="/"
      >
        <h1
          aria-label="Home page"
          class="logo__heading logo__heading--pride logo__heading--no-padding"
          role="button"
        >
          &lt;G/&gt;
        </h1>
      </a>
    </div>
    <div
      class="sc-hAZoDl dOa-DtS"
    >
      <span
        class="sc-iqcoie fIUTrZ sc-crXcEl ggwNYf"
      >
        Built in
        <a
          href="https://reactjs.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="React"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        and
        <a
          href="https://redux.js.org/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Redux"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            width="5"
          />
        </a>
        Hosted on
        <a
          href="https://aws.amazon.com/"
          rel="noopener noreferrer"
          target="_blank"
        >
          <img
            alt="Amazon Web Services"
            class="sc-evZas dELNCN"
            height="5"
            src="IMAGE_MOCK"
            style="margin-top: .8rem; max-width: 2.9rem;"
            width="8.28"
          />
        </a>
      </span>
    </div>
    <div
      class="sc-jqUVSM iynNqP sc-fnykZs"
    >
      <div
        class="sc-kDDrLX hmGkcq"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/blog"
        >
          Blog
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/photography"
        >
          Photography
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/work"
        >
          Work
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/contact"
        >
          Contact
        </a>
      </div>
      <div
        class="sc-kDDrLX hmGkcq"
      >
        <a
          class="sc-iBkjds cXbvnS"
          href="/sitemap"
        >
          Site map
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/privacy-policy"
        >
          Privacy
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/login"
        >
          Login/Account
        </a>
        <a
          class="sc-iBkjds cXbvnS"
          href="/status"
        >
          Status
        </a>
      </div>
    </div>
  </footer>
</div>
`;
